--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,14 +1,205 @@
 {
+    //**********************************************
+    //**********************************************
+    // language server
+    //**********************************************
     "languageserver": {
+        //*******************************************
+        // ccls *************************************
+        //*******************************************
         "ccls": {
             "command": "ccls",
-            "filetypes": ["c", "cpp", "objc", "objcpp"],
-            "rootPatterns": [".ccls", "compile_commands.json", ".vim/", ".git/", ".hg/"],
+            "filetypes": [
+                "c",
+                "cpp",
+                "objc",
+                "objcpp"
+            ],
+            "rootPatterns": [
+                ".ccls",
+                ".ccls-root",
+                "compile_commands.json",
+                ".vim/",
+                ".git/",
+                ".hg/"
+            ],
+            "client": {
+                "snippetSupport": true
+            },
             "initializationOptions": {
                 "cache": {
-                "directory": "/tmp/ccls"
+                    "directory": "/tmp/ccls"
+                },
+                "clang": {
+                    "resourceDir": "/usr/lib/clang/11.0.0",
+                    "extraArgs": [
+                        "-isystem",
+                        "/usr/include/c++/v1",
+                        "-I",
+                        "/usr/include/"
+                    ]
+                },
+                "index": {
+                    "onChange": true
+                },
+                "highlight": {
+                    "lsRanges": true
                 }
             }
+        },
+        //*******************************************
+        // cmake ************************************
+        //*******************************************
+        "cmake": {
+            "command": "cmake-language-server",
+            "filetypes": [
+                "cmake"
+            ],
+            "rootPatterns": [
+                "build/"
+            ],
+            "initializationOptions": {
+                "buildDirectory": "build"
+            }
         }
-    }
+    },
+    //**********************************************
+    //**********************************************
+    // diagnostics
+    //**********************************************
+    //**********************************************
+    "diagnostic.errorSign": " ",
+    "diagnostic.warningSign": " ",
+    "diagnostic.infoSign": "",
+    "diagnostic.hintSign": " ",
+    // "diagnostic.displayByAle": true,
+    // "diagnostic.virtualText": true, // this won't work with codelens when error on same line
+    // codelens
+    // "codeLens.enable": true,
+    // "java.referencesCodeLens.enabled": true,
+    // "java.implementationsCodeLens.enabled": true,
+    // "java.completion.enabled": true,
+    // "java.jdt.ls.vmargs": "-javaagent:/usr/local/share/lombok/lombok.jar",
+    //**********************************************
+    //**********************************************
+    // Coc-settings
+    //**********************************************
+    //**********************************************
+    // autoformat
+    "coc.preferences.formatOnSaveFiletypes": [
+        "css",
+        "markdown",
+        "javascript",
+        "graphql",
+        "html",
+        "yaml",
+        "json",
+        "python",
+        "java"
+    ],
+    "coc.preferences.hoverTarget": "float",
+    //coc-emoji
+    "coc.source.emoji.filetypes": [
+        "markdown"
+    ],
+    //**********************************************
+    //**********************************************
+    // python
+    //**********************************************
+    //**********************************************
+    "python.analysis.autoImportCompletions": true,
+    "python.analysis.autoSearchPaths": true,
+    "python.analysis.diagnosticMode": "openFilesOnly",
+    "python.analysis.stubPath": "typings",
+    "python.analysis.typeshedPaths": [],
+    "python.analysis.diagnosticSeverityOverrides": {},
+    "python.analysis.typeCheckingMode": "basic",
+    "python.analysis.useLibraryCodeForTypes": true,
+    "python.pythonPath": "python",
+    "python.venvPath": "",
+    "python.formatting.provider": "black",
+    "python.formatting.blackPath": "black",
+    "python.formatting.blackArgs": [],
+    "python.formatting.autopep8Path": "autopep8",
+    "python.formatting.autopep8Args": [],
+    "python.formatting.yapfPath": "yapf",
+    "python.formatting.yapfArgs": [],
+    "python.linting.enabled": true,
+    "python.linting.flake8Enabled": false,
+    "python.linting.banditEnabled": false,
+    "python.linting.mypyEnabled": false,
+    "python.linting.pytypeEnabled": false,
+    "python.linting.prospectorEnabled": false,
+    "python.linting.pydocstyleEnabled": false,
+    "python.linting.pylamaEnabled": false,
+    "python.linting.pylintEnabled": false,
+    "pyright.disableCompletion": false,
+    "pyright.disableLanguageServices": false,
+    "pyright.disableOrganizeImports": false,
+    //**********************************************
+    //**********************************************
+    // snippets
+    //**********************************************
+    //**********************************************
+    "snippets.priority": 1,
+    //"yank.priority": 1,
+    "suggest.languageSourcePriority": 99,
+    "coc.source.file.priority": 2,
+    "coc.source.around.priority": 3,
+    "coc.source.buffer.priority": 4,
+    "snippets.ultisnips.directories": [
+        "UltiSnips",
+        "~/.config/nvim/snippets"
+    ],
+    //**********************************************
+    //**********************************************
+    // emmet
+    //**********************************************
+    //**********************************************
+    "emmet.includeLanguages": {
+        "vue-html": "html",
+        "javascript": "javascriptreact"
+    },
+    //**********************************************
+    //**********************************************
+    // css
+    //**********************************************
+    //**********************************************
+    "css.validate": false,
+    "less.validate": false,
+    "scss.validate": false,
+    "wxss.validate": false,
+    //**********************************************
+    //**********************************************
+    // explorer
+    //**********************************************
+    //**********************************************
+    "explorer.width": 30,
+    "explorer.file.root.template": "[icon] [git] [hidden & 1][root]",
+    "explorer.icon.enableNerdfont": true,
+    "explorer.previewAction.onHover": false,
+    "explorer.icon.enableVimDevicons": false,
+    "explorer.file.showHiddenFiles": false,
+    "explorer.keyMappings.global": {
+        "<cr>": [
+            "expandable?",
+            "expand",
+            "open"
+        ],
+        "v": "open:vsplit"
+    },
+    //**********************************************
+    //**********************************************
+    // misc
+    //**********************************************
+    //**********************************************
+    // suggest
+    "suggest.completionItemKindLabels": {
+        "text": "t",
+        "method": "m",
+        "function": ""
+    },
+    // list
+    "list.indicator": ">",
+    "list.selectedSignText": " "
 }
