--- a/coc-settings.json
+++ b/coc-settings.json
@@ -61,6 +61,23 @@
             "initializationOptions": {
                 "buildDirectory": "build"
             }
+        },
+        "haskell": {
+            "command": "haskell-language-server-wrapper",
+            "args": [
+                "--lsp"
+            ],
+            "rootPatterns": [
+                "*.cabal",
+                "stack.yaml",
+                "cabal.project",
+                "package.yaml",
+                "hie.yaml"
+            ],
+            "filetypes": [
+                "haskell",
+                "lhaskell"
+            ]
         }
     },
     //**********************************************
